Use 'why' for bundling on Windows